# openseek

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  project_decription.md  pyproject.toml
.github/workflows/: ci.yml
seeklite/: __init__.py  __main__.py  auth.py  cli.py  client.py  constants.py  ffc6.py
tests/: test_auth.py  test_cli.py  test_client.py  test_constants.py  test_ffc6.py
